Simple text changes for JOCO72
city -> community or county

--- a/app/views/stories/index.html.haml
+++ b/app/views/stories/index.html.haml
@@ -41,7 +41,7 @@
 
   .statement
     .description
-      %h2 Our city.
+      %h2 Our community.
       %p= @city.statement
     .quote
       %p We believe in connection, not catastrophe.
