--- a/app/views/home/home.html.haml
+++ b/app/views/home/home.html.haml
@@ -8,10 +8,10 @@
     %ul
       %li
         %h2 What is #{@city.abbreviation}72?
-        %span #{@city.abbreviation}72 is your hub for emergency preparedness. You’ll find information about what to do in an emergency, simple steps to get connected, and useful guides to help you get prepared. Share #{@city.abbreviation}72 with a friend—and help your loved ones and your city get prepared.
+        %span #{@city.abbreviation}72 is your hub for emergency preparedness. You’ll find information about what to do in an emergency, simple steps to get connected, and useful guides to help you get prepared. Share #{@city.abbreviation}72 with a friend—and help your loved ones and your community get prepared.
       %li
         %h2 Why 72?
-        %span In a serious emergency, city services will be impacted, so a basic rule of thumb is for people to be able to take care of each other for 72 hours before help arrives. That’s just three days—think of it as a long weekend—or nine meals.
+        %span In a serious emergency, county services will be impacted, so a basic rule of thumb is for people to be able to take care of each other for 72 hours before help arrives. That’s just three days—think of it as a long weekend—or nine meals.
   .connection{:style => "background-image: url(#{@city.resident_image.url || "assets/placeholder-residents.jpg"})"}
     %div
       %h2 We believe in connection,</br>not catastrophe.
