--- a/app/assets/stylesheets/footer.css.scss
+++ b/app/assets/stylesheets/footer.css.scss
@@ -21,13 +21,13 @@
 	}
 
 	.by-line:before {
-		font-family: 'sf72-icons';
-		font-size: 2.7rem;
-		content: 'y';
+		font-family: 'joco72-icons';
+		font-size: 3.3rem;
+		content: '!';
 		color: $mid-grey;
 		position: absolute;
 		left: -6.5rem;
-		bottom: 0.1rem;
+		bottom: -.3rem;
 		-webkit-font-smoothing: antialiased;
 	}
 }
