--- a/app/assets/stylesheets/header.css.scss
+++ b/app/assets/stylesheets/header.css.scss
@@ -96,7 +96,7 @@
 			position: absolute;
 			right: -1em;
 			top: 0;
-			font-family: 'sf72-icons';
+			font-family: 'joco72-icons';
 			content: 's';
 			font-size: 0.8em;
 			
