--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -404,7 +404,7 @@
 	position: absolute;
 	top: 0.5rem;
 	left: 0.8rem;
-	font-family: 'sf72-icons';
+	font-family: 'joco72-icons';
 	content: 'u';
 	font-size: 1.7rem;
 	-webkit-font-smoothing: antialiased;
