--- a/app/assets/stylesheets/icons.scss
+++ b/app/assets/stylesheets/icons.scss
@@ -1,17 +1,17 @@
 @font-face {
-	font-family: 'sf72-icons';
-	src:url('/assets/sf72-icons.eot');
-	src:url('/assets/sf72-icons.eot?#iefix') format('embedded-opentype'),
-		url('/assets/sf72-icons.woff') format('woff'),
-		url('/assets/sf72-icons.ttf') format('truetype'),
-		url('/assets/sf72-icons.svg#sf72-icons') format('svg');
+	font-family: 'joco72-icons';
+	src:url('/assets/joco72-icons.eot');
+	src:url('/assets/joco72-icons.eot?#iefix') format('embedded-opentype'),
+		url('/assets/joco72-icons.woff') format('woff'),
+		url('/assets/joco72-icons.ttf') format('truetype'),
+		url('/assets/joco72-icons.svg#joco72-icons') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
 
 /* Use the following CSS code if you want to use data attributes for inserting your icons */
 [data-icon]:before {
-	font-family: 'sf72-icons';
+	font-family: 'joco72-icons';
 	content: attr(data-icon);
 	speak: none;
 	font-weight: normal;
@@ -28,7 +28,7 @@ you can use the generic selector below, but it's slower:
 [class*="icon-"] {
 */
 .icon-quick-guide, .icon-sms, .icon-fuel, .icon-close, .icon-twitter-big, .icon-twitter-big-on, .icon-map-on, .icon-disaster-other, .icon-disaster-connection, .icon-disaster-terrorist, .icon-disaster-hurricane, .icon-disaster-earthquake, .icon-disaster-radiation, .icon-disaster-flood, .icon-pdf, .icon-map-marker, .icon-arrow, .icon-mail, .icon-print, .icon-share-fb, .icon-share-twitter, .icon-sf72, .icon-refresh, .icon-unfold, .icon-dropdown, .icon-close-small, .icon-logo-sf72, .icon-menu-mobile, .icon-map-tips, .icon-alert, .icon-transport, .icon-info, .icon-about-tooltip, .icon-app-tooltip, .icon-manifesto {
-	font-family: 'sf72-icons';
+	font-family: 'joco72-icons';
 	speak: none;
 	font-style: normal;
 	font-weight: normal;
