--- a/app/assets/stylesheets/quick_guide.css.scss
+++ b/app/assets/stylesheets/quick_guide.css.scss
@@ -88,7 +88,7 @@
 				top: 0;
 				left: 0;
 				text-indent: 0;
-				font-family: 'sf72-icons';
+				font-family: 'joco72-icons';
 				content: 'w';
 				-webkit-font-smoothing: antialiased;
 			}
