--- a/app/assets/stylesheets/slider.scss
+++ b/app/assets/stylesheets/slider.scss
@@ -46,7 +46,7 @@
 }
 
 .bx-controls-direction a:before {
-	font-family: 'sf72-icons';
+	font-family: 'joco72-icons';
 	position: absolute;
 	top: 0;
 	left: 0;
