updated font to have generic cloud icon
upload to cloud instead of google drive logo, image from public domain
via http://thenounproject.com/term/cloud-upload/2633/

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -40,7 +40,7 @@ $phone: 'E';
 $airbnb-icn: 'F';
 $twitter-icn: 'G';
 $facebook-icn: 'H';
-$drive-icn: ',';
+$drive-icn: '@';
 $neighbors-icn: '.';
 $video-play: 'I';
 
