--- a/app/views/home/supplies.html.haml
+++ b/app/views/home/supplies.html.haml
@@ -5,7 +5,7 @@
   .opening.supplies
     %h1 You’re more prepared than you think.
     %div
-      %p Whether you’re just starting out or a preparedness pro, gathering your emergency supplies is easy. A good rule of thumb is to have supplies for about 3 days, or 72 hours. You’ll be surprised at how much you already have.
+      %p Whether you’re just starting out or a preparedness pro, gathering your emergency supplies is easy. A good rule of thumb is to have supplies for about 3 days, or 72 hours. You’ll be surprised at how much you</br>already have.
   .action-bar
     %ul.tabs
       %li.essentials-trigger.active
