--- a/app/views/home/connect.html.haml
+++ b/app/views/home/connect.html.haml
@@ -10,7 +10,7 @@
   .existing-networks
     .use
       %h2 Connect through your<br /> digital networks.
-      %p.intro-networks In the event of an emergency, we all turn to our existing tools and networks—many of which are digital. Think about your connections and the online communities you’re already a part of, so you can share updates and information when something happens.
+      %p.intro-networks In the event of an emergency, we all turn to our existing tools<br/>and networks—many of which are digital. Think about your connections and the online communities you’re already a<br/>part of, so you can share updates and information when something happens.
     .know
       %h3 Learn about #{@city.abbreviation}72.
       %p Find out the story behind the creation of #{@city.abbreviation}72.
@@ -24,10 +24,10 @@
       %li.twitter
         %h3 Check updates</br>on Twitter
         %p <strong>Now:</strong> Add emergency accounts to your Twitter feed, to stay informed. Some of our favorites: #{tweeter_accounts(@city_connection.twitter_accounts).html_safe}.
-        %p <strong>In an emergency:</strong> Post about yourself and your area. Use <a href="https://twitter.com/search?q=%23#{@city.abbreviation}72" target="_blank">##{@city.abbreviation}72</a> to include them in the crowdsourced emergency feed.
+        %p <strong>In an emergency:</strong> Post about yourself and your</br>area. Use <a href="https://twitter.com/search?q=%23#{@city.abbreviation}72" target="_blank">##{@city.abbreviation}72</a> to include them in the crowdsourced emergency feed.
       %li.drive
         %h3 Save documents to</br>a cloud service
-        %p <strong>Now:</strong> Scan personal documents like your driver’s license, passport, and birth certificate. Save digital copies in the cloud through Google Drive or Dropbox.
+        %p <strong>Now:</strong> Scan personal documents like your driver’s license, passport, and birth certificate. Save digital copies in the cloud through Google Drive</br>or Dropbox.
         %p <strong>In an emergency:</strong> Access your documents remotely in case you can't get home. Know that there is a safe copy stored in the cloud.
       - @city_connection.city_networks.included.each do |cn|
         %li
