--- a/app/views/home/em_home.html.haml
+++ b/app/views/home/em_home.html.haml
@@ -60,7 +60,7 @@
       %li#transportation-updates-tab
         %a{href:"#tab-service-status"}
           %h3 Transportation Updates
-          %span From 511.org
+          %span From Twitter
     %ul.tw-tabs-mobile
       %li.active
         %a{href:"#tab-citizen-updates"}
