--- a/app/views/home/supplies.html.haml
+++ b/app/views/home/supplies.html.haml
@@ -46,8 +46,8 @@
             %h4 #{item.title}
             %p.overlay-text #{item.use_case}
   .kits
-    %h2 Sharing is caring.
-    %p Emergencies are opportunities to come together and support those around you. What items would you’d like to share? Uncorking a bottle of wine, singing songs, or sharing  a meal are even more meaningful in the days after an emergency than before.
+    %h2 Come together.
+    %p Emergencies are opportunities to unite and support those around you. Sharing a meal, book, or phone charger is even more meaningful in the days after an emergency than before. What items would you’d like to share with friends and neighbors?
     %ul.kits-list
       - @kits.each do |kit|
         %li
